--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         app_compat_version = '1.2.0'
         compose_version = '1.0.0-beta01'
         core_ktx_version = '1.3.2'
+        coroutines_version = '1.4.2-native-mt'
         espresso_version = '3.3.0'
         gradle_version = '7.0.0-alpha08'
         junit_version = '4.13.2'
