--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -9,7 +9,9 @@ java {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    def dependencies = rootProject.ext.dependencies
+
+    implementation dependencies.kotlinStdlib
+    implementation dependencies.coroutines
+    implementation dependencies.coroutinesAndroid
 }
