--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,21 @@
-buildscript {
-    ext {
-        activity_compose_version = '1.3.0-alpha03'
-        app_compat_version = '1.2.0'
-        compose_version = '1.0.0-beta01'
-        core_ktx_version = '1.3.2'
-        coroutines_version = '1.4.2-native-mt'
-        espresso_version = '3.3.0'
-        gradle_version = '7.0.0-alpha08'
-        junit_version = '4.13.2'
-        junit_ext_version = '1.1.2'
-        kotlin_version = '1.4.30'
-        lifecycle_version = '2.3.0'
-        material_version = '1.3.0'
-    }
+apply from: 'gradle/dependencies.gradle'
 
+buildscript {
     repositories {
         google()
         mavenCentral()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:$gradle_version"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.0.0-beta03'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
 
