--- a/data/build.gradle
+++ b/data/build.gradle
@@ -10,8 +10,6 @@ android {
     defaultConfig {
         minSdkVersion 25
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -33,6 +31,8 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:$core_ktx_version"
+    def dependencies = rootProject.ext.dependencies
+
+    implementation dependencies.kotlinStdlib
+    implementation dependencies.coreKtx
 }
